--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ networkx==2.4
 numpy==1.17.3
 opencv-python-headless==4.1.1.26
 packaging==19.2
-Pillow==6.2.0
+Pillow>=6.2.2
 pluggy==0.13.0
 py==1.8.0
 pyparsing==2.4.2
